# semistatic-slam

./: CMakeLists.txt  README.md  posediff.txt
featureextraction/: CMakeLists.txt  plane_segmentation.cpp  pointcloudgenerator.cpp
featureextraction/Scenario_1-1/: imu.txt  odom.txt  poses.txt
featureextraction/Scenario_1-1/LaserScans/: 0000.pcd  0001.pcd  0002.pcd  0003.pcd  0004.pcd  0005.pcd  0006.pcd  0007.pcd  0008.pcd  0009.pcd  0010.pcd  0011.pcd  0012.pcd  0013.pcd  0014.pcd  0015.pcd  0016.pcd  0017.pcd  0018.pcd  0019.pcd  0020.pcd  0021.pcd  0022.pcd  0023.pcd  0024.pcd  0025.pcd  0026.pcd  0027.pcd  0028.pcd  0029.pcd  0030.pcd  0031.pcd  0032.pcd  0033.pcd  0034.pcd  0035.pcd  0036.pcd  0037.pcd  0038.pcd  0039.pcd  (+4070 more)
pointcloudprocessing/: CMakeLists.txt  rgbd2pcd.cpp
pointcloudprocessing/data/: cabinet.pcd
pointcloudprocessing/pcl/: CMakeLists.txt  planesegmentation.cpp
src/: SLAM.cpp  SLAM_no_persistence.cpp  SLAM_persistence.cpp  SLAM_persistence_refactor.cpp
src/Data/: imu.txt  odom.txt  poses.txt
src/SLAM_Headers/: DataAssociation.h  LandmarkPoses.h  LandmarkPosesExperiment.h  LandmarkUpdates.h  Marginalize.h  Odometry.h  Plotting.h  Random.h
src/SLAM_No_Persistence/: SLAM_no_persistence.h
src/SLAM_Persistence/: SLAM_Persistence_Data.h  SLAM_persistence_simulation.h
